# python-1-starter

./: .gitattributes  .pre-commit-config.yaml  404.html  Makefile  README.md  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_publish_package_pipeline.yaml
docs/: index.md
docs/other/: interakcje_baza_aplikacja.md
docs/projekt/: projekt.md
docs/zaj2/: funkcje.md  petle.md  przypisania.md
docs/zaj3/: dokumentacja.md  funkcje_02.md  konwencja_nazewnictwa.md  moduly.md  pakiety.md  zasiegi.md
docs/zaj4/: obiektowe.md
docs/zaj5/: dekoratory.md  menadzery_kontekstu.md  wyjatki.md
docs/zaj6/: pakiety_kontynuacja.md  srodowiska_wirtualne.md
docs/zaj7/: formatowanie.md  make.md  precommit.md
docs/zaj8/: cli.md  logowanie.md  testy.md
other/interakcje_baza_aplikacja/: index.html
projekt/projekt/: index.html
search/: search_index.json
zaj2/funkcje/: index.html
zaj2/petle/: index.html
zaj2/przypisania/: index.html
zaj3/dokumentacja/: index.html
zaj3/funkcje_02/: index.html
zaj3/konwencja_nazewnictwa/: index.html
zaj3/moduly/: index.html
zaj3/pakiety/: index.html
zaj3/zasiegi/: index.html
zaj4/obiektowe/: index.html
zaj5/dekoratory/: index.html
zaj5/menadzery_kontekstu/: index.html
zaj5/wyjatki/: index.html
zaj6/pakiety_kontynuacja/: index.html
zaj6/srodowiska_wirtualne/: index.html
zaj7/formatowanie/: index.html
zaj7/make/: index.html
zaj7/precommit/: index.html
zaj8/cli/: index.html
zaj8/logowanie/: index.html
zaj8/testy/: index.html
